# text-to-sql-eval-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: eval.yml
datasets/: dspy_optimized_prompt.json
datasets/docs/: ecommerce_kb.md
datasets/finetune/: eval.jsonl  train.jsonl
datasets/golden/: policy_questions.json  questions.json
datasets/synthetic/: holdout_test.json  tuning.json
docs/: api.md  dspy.md  evals-ci.md  findings.md  fine-tuning.md  guardrails.md  rag.md  routing.md  strategies.md  tool-use.md
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
logs/: 2026-04-02T18-25-15-00-00_text-to-sql_nkDUNz4mDQsgZgQJHLKrTP.eval  2026-04-02T18-31-30-00-00_text-to-sql_L2PBp9YTjiMSXTEMxUwF7C.eval  2026-04-02T18-44-44-00-00_text-to-sql_PGn6o8ahiH4uxiFVUSGfMM.eval  2026-04-03T09-14-49-00-00_text-to-sql_H6wTzeiPaQySDoHa8GFBSf.eval  2026-04-03T09-21-29-00-00_text-to-sql_hpjjF7hoRQFT7pnF3LN5fz.eval
notebooks/: finetune_llama.ipynb  vllm_colab.ipynb
scripts/: benchmark_agent.py  benchmark_rag.py  benchmark_routing.py  benchmark_schema_retrieval.py  ci_eval.py  generate_synthetic.py  optimize_prompt.py  prepare_finetune_data.py  run_eval.py  seed_db.py
src/agent/: agent.py  dspy_module.py  few_shot.py  router.py  schema_retriever.py  tools.py
src/api/: main.py
src/api/routes/: agent.py  evals.py
src/evals/: scorers.py  tasks.py
src/guardrails/: input.py  output.py
src/inference/: backend.py
src/rag/: chunker.py  retriever.py  vector_store.py
src/utils/: db.py
tests/: test_guardrails_adversarial.py  test_input_guardrails.py  test_output_guardrails.py
